City Suggestions functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
                 class="weather__search"
                 placeholder="Search Your City"
             />
-            <datalist id="suggestions"></datalist>
+            <datalist id="suggestions">
+                <!-- <option value="Dhaka"></option>
+                <option value="London"></option>
+                <option value="New York"></option> -->
+            </datalist>
             <div class="weather__today">
                 <div class="weather__details">
                     <h2 class="weather__city">City</h2>
